--- a/admin/assets/css/main.css
+++ b/admin/assets/css/main.css
@@ -1,12 +1,12 @@
-.woo-nova-poshta-form {
+.shipping-nova-poshta-for-woocommerce-form {
     max-width: 500px;
 }
 
-.woo-nova-poshta-form input[type=text],
-.woo-nova-poshta-form input[type=tel],
-.woo-nova-poshta-form input[type=number],
-.woo-nova-poshta-form select,
-.woo-nova-poshta-form .select2-container {
+.shipping-nova-poshta-for-woocommerce-form input[type=text],
+.shipping-nova-poshta-for-woocommerce-form input[type=tel],
+.shipping-nova-poshta-for-woocommerce-form input[type=number],
+.shipping-nova-poshta-for-woocommerce-form select,
+.shipping-nova-poshta-for-woocommerce-form .select2-container {
     display: block;
     width: 100%;
     max-width: 100%;
@@ -41,12 +41,12 @@
     height: 28px;
 }
 
-#woocommerce-order-items #order_shipping_line_items.woo-nova-poshta .thumb div {
+#woocommerce-order-items #order_shipping_line_items.shipping-nova-poshta-for-woocommerce .thumb div {
     margin: 0;
     width: 100%;
 }
 
-#woocommerce-order-items #order_shipping_line_items.woo-nova-poshta .thumb div::before {
+#woocommerce-order-items #order_shipping_line_items.shipping-nova-poshta-for-woocommerce .thumb div::before {
     content: '';
     display: block;
     width: 42px;
