add select styles

--- a/front/assets/css/main.css
+++ b/front/assets/css/main.css
@@ -1,6 +1,8 @@
 #shipping_nova_poshta_for_woocommerce_city,
 #shipping_nova_poshta_for_woocommerce_warehouse {
     transition: .3s ease;
+    display: block;
+    width: 100%;
 }
 
 #shipping_nova_poshta_for_woocommerce_city.inactive,
