--- a/front/assets/css/main.css
+++ b/front/assets/css/main.css
@@ -3,6 +3,7 @@
     transition: .3s ease;
     display: block;
     max-width: 100%;
+    box-sizing: border-box;
 }
 
 #shipping_nova_poshta_for_woocommerce_city.inactive,
